[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/Sky/Main.gd" type="Script" id=1]
[ext_resource path="res://Skybox.tscn" type="PackedScene" id=2]
[ext_resource path="res://default_env.tres" type="Environment" id=3]
[ext_resource path="res://scripts/cameracontrol.gd" type="Script" id=4]

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Skybox/Sky_texture")

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Skybox/Cloud_texture")

[node name="scene" type="Spatial"]
script = ExtResource( 1 )

[node name="Skybox" parent="." instance=ExtResource( 2 )]
editor/display_folded = true

[node name="Cloudrender" parent="Skybox/Cloud_texture" index="0"]
script = null

[node name="Sky_texture" parent="Skybox" index="2"]
script = null

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.76811, 0.640318, 0, -0.640318, -0.76811, 0, 3.84865, -5.0612 )

[node name="camera" type="Camera" parent="."]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 6.36598, 2.33312, -0.261921 )
environment = ExtResource( 3 )
current = true
script = ExtResource( 4 )
followPointPath = NodePath("..")

[node name="Control" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Time_Of_Day" type="HSlider" parent="Control"]
margin_left = 13.6842
margin_top = 7.36842
margin_right = 1013.68
margin_bottom = 23.3684
focus_mode = 0
max_value = 24.0
step = 0.25
value = 8.0
scrollable = false
tick_count = 24
ticks_on_borders = true
focus_mode = 0

[node name="Label_controls" type="Label" parent="Control"]
margin_left = 16.579
margin_top = 32.184
margin_right = 259.579
margin_bottom = 46.184
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Control: rotate camera with arrow keys"

[node name="Label_paramsheader" type="Label" parent="Control"]
margin_left = 18.1053
margin_top = 54.1556
margin_right = 116.105
margin_bottom = 68.1556
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Clouds params:"

[node name="Coverage" type="Label" parent="Control"]
margin_left = 18.2105
margin_top = 73.7321
margin_right = 86.2105
margin_bottom = 87.7321
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "COVERAGE"

[node name="CoverageBar" type="HScrollBar" parent="Control/Coverage"]
margin_left = 5.0
margin_top = 17.2915
margin_right = 145.0
margin_bottom = 30.2915
max_value = 1.0
step = 0.05
value = 0.5

[node name="Absorption" type="Label" parent="Control"]
margin_left = 18.2105
margin_top = 108.315
margin_right = 103.211
margin_bottom = 122.315
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABSORPTION"

[node name="AbsorptionBar" type="HScrollBar" parent="Control/Absorption"]
margin_left = 5.0
margin_top = 17.2916
margin_right = 145.0
margin_bottom = 29.2916
max_value = 10.0
step = 0.1
value = 1.0

[node name="Thickness" type="Label" parent="Control"]
margin_left = 18.2105
margin_top = 149.923
margin_right = 118.211
margin_bottom = 163.923
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "THICKNESS"

[node name="ThicknessBar" type="HScrollBar" parent="Control/Thickness"]
margin_left = 5.0
margin_top = 16.2108
margin_right = 145.0
margin_bottom = 28.2108
step = 1.0
value = 25.0

[node name="Steps" type="Label" parent="Control"]
margin_left = 18.2105
margin_top = 184.403
margin_right = 103.211
margin_bottom = 198.403
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STEPS (1-100)"

[node name="StepsBar" type="HScrollBar" parent="Control/Steps"]
margin_left = 5.0
margin_top = 16.2108
margin_right = 145.0
margin_bottom = 28.2108
step = 1.0
value = 25.0

[node name="WindSpeed" type="Label" parent="Control"]
margin_left = 18.2105
margin_top = 218.952
margin_right = 103.211
margin_bottom = 232.952
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "WIND SPEED"

[node name="WindBar" type="HScrollBar" parent="Control/WindSpeed"]
margin_left = 5.0
margin_top = 16.2108
margin_right = 145.0
margin_bottom = 28.2108
max_value = 15.0
step = 0.1
value = 1.3

[node name="Skypreview" type="TextureRect" parent="Control"]
margin_top = 346.0
margin_right = 512.0
margin_bottom = 602.0
texture = SubResource( 3 )
expand = true

[node name="Label" type="Label" parent="Control/Skypreview"]
margin_left = 8.42105
margin_top = -18.9474
margin_right = 177.421
margin_bottom = -4.94736
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "sky from isolated viewport"

[node name="Cloudspreview" type="TextureRect" parent="Control"]
margin_left = 512.0
margin_top = 346.0
margin_right = 1024.0
margin_bottom = 602.0
texture = SubResource( 4 )
expand = true

[node name="Label2" type="Label" parent="Control/Cloudspreview"]
margin_left = 320.532
margin_top = -17.8772
margin_right = 503.532
margin_bottom = -3.87723
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "clouds from isolated viewport"
[connection signal="sky_updated" from="Skybox" to="." method="_on_Skybox_sky_updated"]
[connection signal="value_changed" from="Control/Time_Of_Day" to="." method="_on_Time_Of_Day_value_changed"]
[connection signal="value_changed" from="Control/Coverage/CoverageBar" to="Skybox" method="_on_CoverageBar_value_changed"]
[connection signal="value_changed" from="Control/Absorption/AbsorptionBar" to="Skybox" method="_on_AbsorptionBar_value_changed"]
[connection signal="value_changed" from="Control/Thickness/ThicknessBar" to="Skybox" method="_on_ThicknessBar_value_changed"]
[connection signal="value_changed" from="Control/Steps/StepsBar" to="Skybox" method="_on_StepsBar_value_changed"]
[connection signal="value_changed" from="Control/WindSpeed/WindBar" to="Skybox" method="_on_WindBar_value_changed"]

[editable path="Skybox"]
